refactor(knowledge):重构知识库模块架构并优化DTO结构
- 将BotController暂时注释以重新设计Agent集成方案
- 在多个DTO类中添加@JsonIgnoreProperties注解提升JSON序列化兼容性- 修改ChunkDTO中positions字段类型为嵌套列表并添加token字段
-为DatasetDTO和DocumentDTO添加更多时间日期字段映射
-重构KnowledgeBaseAdapter接口参数结构使用统一的请求对象
- 实现DocumentStatusSyncTask定时任务同步文档处理状态
-优化KnowledgeBaseService统计信息更新机制
- 修复数据集删除时的级联删除逻辑防止孤儿数据
- 统一本地实体ID与RAGFlow ID避免前端调用错误